overflow fixed

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -21,6 +21,7 @@ body {
 @media only screen and (max-width: 1400px) {
   body {
     overflow-Y: scroll;
+    overflow-x: hidden;
   }
 }
 
